--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,36 +4,16 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
 
     tools:context="com.pedrocova.popularmoviesapp.MainActivity">
-
-    <TextView
-        android:id="@+id/activity_main_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:text="@string/main_title"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_movies_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/activity_main_title">
+        android:layout_alignParentTop="true">
 
     </android.support.v7.widget.RecyclerView>
-
-    <Spinner
-        android:id="@+id/sp_sort_by"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/rv_movies_grid"
-        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/tv_main_error_message"
@@ -42,12 +22,12 @@
         android:gravity="center_horizontal"
         android:padding="16dp"
         android:visibility="gone"
-        android:layout_below="@id/sp_sort_by"/>
+        android:layout_below="@id/rv_movies_grid"/>
 
     <ProgressBar
         android:id="@+id/pb_main_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        android:layout_below="@id/sp_sort_by"/>
+        android:layout_below="@id/rv_movies_grid"/>
 </RelativeLayout>
