--- a/app/src/main/res/layout/movie_grid_cell.xml
+++ b/app/src/main/res/layout/movie_grid_cell.xml
@@ -3,8 +3,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:padding="4dp"
     android:background="@color/colorPrimary">
 
     <ImageView
@@ -15,17 +13,17 @@
         android:scaleType="centerCrop"
         android:duplicateParentState="true"/>
 
-    <TextView
-        android:id="@+id/tv_movie_title"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:minHeight="46dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:paddingTop="5dp"
-        android:textColor="#ffffff"
-        android:textSize="16sp"
-        android:duplicateParentState="true"/>
+    <!--<TextView-->
+        <!--android:id="@+id/tv_movie_title"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:minHeight="46dp"-->
+        <!--android:gravity="center"-->
+        <!--android:textAlignment="center"-->
+        <!--android:paddingTop="5dp"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:textSize="16sp"-->
+        <!--android:duplicateParentState="true"/>-->
 
 </LinearLayout>
